Update Regression & ANOVA.ipynb

--- a/MDS/04. Regression & ANOVA/Regression & ANOVA.ipynb
+++ b/MDS/04. Regression & ANOVA/Regression & ANOVA.ipynb
@@ -911,7 +911,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "由於虛無假設 H0: 殘差服從常態分配，因為p-value > 0.05，代表不會拒絕H0。"
+    "由於虛無假設 H0: 殘差服從常態分配，因為p-value < 0.05，代表有足夠的證據拒絕H0，故可能違反了殘差對於常態性的假設。"
    ]
   },
   {
